# nevara

./: README.md  pyproject.toml
agent_workspace/: empty.txt
src/configs/: __init__.py  config.toml
src/data/memory/: messages_sav.json
src/nevara/: config.py  main.py  manager.py  memory.py
src/nevara/agent/: LM.py  __init__.py  interface.py
src/nevara/agent/executor/: __init__.py  docManager.py  fsManager.py  searchManager.py
src/nevara/components/: tts.py  vector_db.py
src/nevara/memory/: __init__.py  vector_db.py
src/nevara/modules/: tts.py  util.py
src/nevara/prompts/: __init__.py  router.md  system.md
src/nevara/prompts/memory/: history.md
src/nevara/prompts/system/: summary.md
src/nevara/schema/: state.py  struct.py  types.py
src/nevara/utils/: agent_kit.py  document_utils.py  memory_utils.py  std_kit.py  system_format.py  tts_kit.py
vision/: checklist.md  report_1.md  report_2.md  report_3.md
