[project]
name = "nevara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.15.0",
    "faiss-cpu>=1.14.2",
    "kokoro>=0.9.4",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "transformers>=5.10.2",
    "unstructured>=0.22.32",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
